--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
-    "@11ty/eleventy-navigation": "^0.1.5"
+    "@11ty/eleventy-navigation": "^0.1.5",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1"
   }
 }
