--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "super-blog-content"]
 	path = super-blog-content
-	url = git@gitlab.com:giuliach/super-blog-content.git
+	url = git@gitlab-GMAIL.com:giuliach/super-blog-content.git
