--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "super-blog-content"]
 	path = super-blog-content
 	url = git@gitlab-GMAIL:giuliach/super-blog-content.git
+[submodule "super-styleguide"]
+	path = super-styleguide
+	url = git@gitlab-GMAIL:giuliach/super-styleguide.git
