--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "rm -rf _site && npx @11ty/eleventy --serve",
-    "build": "rm -rf _site && npx @11ty/eleventy && cp google* _site/"
+    "build": "rm -rf _site && npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
