--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "luxon": "^1.23.0",
     "markdown-it-attrs": "^3.0.2"
   }
 }
