--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "eleventy-plugin-nesting-toc": "^1.2.0",
+    "eleventy-plugin-reading-time": "0.0.1",
     "luxon": "^1.23.0",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-attrs": "^3.0.2"
