--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "@11tyrocks/eleventy-plugin-social-images": "^0.1.2",
+    "@11tyrocks/eleventy-plugin-social-images": "github:giuliachiola/eleventy-plugin-social-images#feature/add-custom-selectors",
     "clean-css": "^4.2.3",
     "eleventy-plugin-nesting-toc": "^1.2.0",
     "eleventy-plugin-reading-time": "0.0.1",
