feat: update README and eleventyignore

--- a/.eleventyignore
+++ b/.eleventyignore
@@ -4,5 +4,5 @@ super-blog-content/TO_REVIEW/
 z-resources/
 README.md
 
-pages.json
-_generate/social-img-build/preview.html
+# pages.json
+# _generate/social-img-build/preview.html
