docs: add author in package.json

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "deploy:netlify": "AWS_LAMBDA_FUNCTION_NAME=trickpuppeteer npm run build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Giulia Chiola",
   "license": "ISC",
+  "repository": "github:giuliachiola/super-blog-11ty",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-navigation": "^0.1.6",
