--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "@11tyrocks/eleventy-plugin-social-images": "^0.1.2",
     "clean-css": "^4.2.3",
+    "dotenv": "^10.0.0",
     "eleventy-plugin-nesting-toc": "^1.2.0",
     "eleventy-plugin-reading-time": "0.0.1",
     "luxon": "^1.25.0",
